# pills

./: Cargo.toml  index.html  pills.js
.github/workflows/: build_and_deploy_web.yml
crates/augments/: Cargo.toml
crates/augments/src/: frequency.rs  lib.rs  potency.rs  resilence.rs  urgency.rs  volatility.rs
crates/auras/: Cargo.toml
crates/auras/src/: aura.rs  lib.rs  limited_move_aura.rs  limited_pill_aura.rs  score_aura.rs
crates/core/: Cargo.toml
crates/core/src/: app_state.rs  events.rs  game_state.rs  lib.rs  pieces.rs
crates/game_board/: Cargo.toml
crates/game_board/src/: board.rs  lib.rs
crates/input/: Cargo.toml
crates/input/src/: lib.rs
crates/level/: Cargo.toml
crates/level/src/: lib.rs
crates/menu/: Cargo.toml
crates/menu/src/: level_menu.rs  lib.rs  main_menu.rs  menu.rs  pause_menu.rs
crates/pieces/: Cargo.toml
crates/pieces/src/: lib.rs
crates/score/: Cargo.toml
crates/score/src/: lib.rs
crates/sound/: Cargo.toml
crates/sound/src/: lib.rs
crates/sprites/: Cargo.toml
crates/sprites/src/: board.rs  lib.rs  pieces.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
src/: main.rs
src/game/: board.rs  grid.rs  mod.rs
