[package]
name = "pills_game"

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "pills"
path = "src/main.rs"

[profile.lto]
inherits = "release"
lto = "thin"

[profile.testing]
inherits = "release"
opt-level = 2
debug = true
debug-assertions = true
overflow-checks = true

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.testing.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'

[dependencies]
pills_game_board.workspace = true
pills_auras.workspace = true
pills_pieces.workspace = true
pills_score.workspace = true
pills_core.workspace = true
pills_input.workspace = true
pills_sound.workspace = true
pills_menu.workspace = true
pills_level.workspace = true
pills_sprites.workspace = true
bevy.workspace = true
rand.workspace = true

[workspace.dependencies]
pills_game_board = { path = "crates/game_board", version = "0.1.0-dev" }
pills_auras = { path = "crates/auras", version = "0.1.0-dev" }
pills_pieces = { path = "crates/pieces", version = "0.1.0-dev" }
pills_score = { path = "crates/score", version = "0.1.0-dev" }
pills_core = { path = "crates/core", version = "0.1.0-dev" }
pills_input = { path = "crates/input", version = "0.1.0-dev" }
pills_sound = { path = "crates/sound", version = "0.1.0-dev" }
pills_menu = { path = "crates/menu", version = "0.1.0-dev" }
pills_level = { path = "crates/level", version = "0.1.0-dev" }
pills_sprites = { path = "crates/sprites", version = "0.1.0-dev" }

bevy = "0.11"
rand = "*"

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0-dev"

edition = "2021"
authors = ["Brandon Smith <brandon.cole.smith@gmail.com>"]
repository = "https://github.com/b-r-a-n/pills"
