[package]
name = "pills_level"
description = "Level configuration and construction"

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bevy.workspace = true
pills_core.workspace = true
pills_input.workspace = true
pills_augments.workspace = true
rand.workspace = true