[package]
name = "pills_sprites"
description = "Pills sprites and drawing"

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bevy.workspace = true
pills_core.workspace = true
pills_input.workspace = true
pills_level.workspace = true